[gd_scene load_steps=2 format=3 uid="uid://bm5qwma4xuo3b"]

[ext_resource type="Script" uid="uid://bg4us7olei3ed" path="res://main_menu.gd" id="1_06t4h"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.5
offset_right = 226.5
offset_bottom = 187.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "boots"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 204.44446
offset_bottom = 111.24185
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.53, 1.53)
alignment = 1

[node name="Start_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Start Game"

[node name="Options_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "exit"

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
